# spiderpig-os

./: Makefile  bochs.rc  bochsout.txt  doxy.conf  doxyext.conf  image.iso  update_doc.sh  update_svn.sh
src/: Makefile.am  menu.lst
src/.svn/: all-wcprops  entries
src/.svn/text-base/: Makefile.svn-base
src/app/: link.ld
src/app/.svn/: all-wcprops  entries
src/app/installer/: main.c
src/app/screenpig/: bar.c  events.c  term.c
src/app/system/: Makefile
src/app/test/: Makefile  main.c
src/app/test2/: main.asm
src/initr/: dirent.h  init.sh  license.txt  string.h  test.txt  test2
src/initr/.svn/: all-wcprops  entries
src/kernel/: Makefile  device.c  kernel  log.c  syscall.c
src/kernel/.svn/: all-wcprops  entries
src/kernel/configs/: current_config.h
src/kernel/driver/: smbios.c  smbios.h
src/kernel/fs/: devfs.c  fs.c  mount.c
src/kernel/include/: bish.h  debug.h  log.h  main.h  multiboot.h  types.h
src/kernel/klibc/: string.c  time.c  typeconv.c
src/kernel/mm/: mm.c  phys.c
src/kernel/network/: network.c
src/kernel/task/: elf.c  task.c
src/lib/.svn/: all-wcprops  entries
src/lib/libc/: Makefile  assert.c  dirent.c  malloc.c  stdio.c  stdlib.c  string.c  time.c
src/modules/.svn/: all-wcprops  entries
src/toolchain/.svn/: all-wcprops  entries
src/tools/.svn/: all-wcprops  entries
src/tools/gimp2raw/: bottom-right.raw  bottom.raw  cursor.raw  menu.raw  network.raw  right.raw  title-2.raw  top_left.raw
src/tools/initramfs_gen/: initram.img  main.c
src/tools/pack_gen/: main.c  packet.c
src/tools/pfstools/: Makefile
(+783 files in other folders)
